[project]
name = "hexmapper"
version = "0.1.0"
description = "Hexagonal grid map editor for TTRPGs"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Stephen Hannaway", email = "stephenjameshannaway@gmail.com"},
]
dependencies = [
    "pygame>=2.0.0",
    "pygame-gui>=0.6.0",
]

[project.scripts]
hexmapper = "hexmapper.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pygame", "pygame.*", "pygame_gui", "pygame_gui.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexmapper"]
